src/components/DocsNavigation/DocsNavigation.module.css
.docsNavigation {
  display: none;
  top: var(--ifm-navbar-height);
  background-color: var(--color-white);
  z-index: 200;
  max-width: 100vw;
  height: var(--docs-top-nav-height);
  margin-bottom: -38px;
  width: 100%;
  transform: translateY(-100%);
  border-bottom: 1px solid var(--color-tonal-neutral-0);

  @media (--nav) {
    display: flex;
    position: sticky;
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */

    &::-webkit-scrollbar {
      display: none; /* Chrome, Safari, and Opera */
    }

    &.open {
      height: auto;
    }
  }

  @media (--sm-scr) {
    &.open {
      max-height: 80dvh;
      overflow-y: scroll;
      height: max-content;
      border-bottom: 1px solid var(--color-tonal-neutral-1);
    }
  }

  .mobileNavToggle {
    background-color: var(--color-tonal-neutral-0);
    border: unset;
    border-radius: 4px;
    padding: 5px 8px;
    position: absolute;
    top: 0.5rem;
    left: 1rem;

    @media (--md-scr) {
      display: none;
    }
  }

  .mobileActiveLabel {
    color: var(--color-dark-purple);
    max-height: var(--docs-top-nav-height);
    font-weight: var(--fw-bold);
    font-size: 13px;
    padding: 14px 0px 14px 64px;
    margin-bottom: 0;
    line-height: 1.539;
    &.hidden {
      display: none;
    }
    @media (--md-scr) {
      display: none;
    }
  }

  .navList {
    margin-bottom: 0;
    list-style: none;
    padding-left: 0;
    display: flex;
    flex-direction: column;
    width: 100%;
    background-color: var(--color-white);
    visibility: hidden;
    height: 0;

    @media (--nav) {
      width: max-content;
      flex-direction: row;
      height: auto;
      margin-left: 12px;
      visibility: visible;
    }

    @media (--lg-scr) {
      margin-left: var(--m-1);
    }

    &.navListRight {
      margin-right: var(--m-1);
      @media (--lg-scr) {
        margin-left: auto;
      }
    }

    &.open {
      visibility: visible;
      height: auto;
      padding-top: 14px;
      &:last-of-type {
        padding-top: 0;
        padding-bottom: 14px;
      }
    }

    .navItem {
      display: flex;
      align-items: center;

      &.navItemDropdown {
        position: relative;
        cursor: pointer;
        flex-direction: column;
        align-items: flex-start;

        @media (--md-scr) {
          flex-direction: row;
          align-items: center;
        }

        .subNavList {
          margin: 0;
          list-style: none;
          padding-left: unset;
          @media (--md-scr) {
            position: absolute;
            top: 100%;
            left: -50%;
            z-index: 1;
            width: 150%;
            display: none;
            background-color: var(--color-white);
            box-shadow: var(--box-shadow);
            padding: 8px 0;
            box-shadow: 0 5px 20px 0 rgba(19, 19, 19, 0.1);
            border-bottom-left-radius: 12px;
            border-bottom-right-radius: 12px;
          }
        }

        .subNavLink {
          display: block;
          color: var(--color-black);
          font-size: 13px;
          text-decoration: none;
          line-height: 1.5;
          -webkit-font-smoothing: antialiased;
          margin-left: 64px;
          padding: var(--m-1) 0;

          &:hover {
            color: var(--color-dark-purple);
          }

          &.active {
            color: var(--color-dark-purple);
            font-weight: var(--fw-bold);
          }

          @media (--md-scr) {
            margin-left: unset;
            padding: 7px 16px;
          }
        }

        &:hover {
          .icon {
            transform: rotate(270deg);
          }
          .subNavList {
            display: block;
          }
          .navLink {
            color: var(--color-dark-purple);
          }
        }

        .navLink {
          padding-right: var(--m-1);
        }
      }

      .iconWrapper {
        display: flex;
        align-items: center;
      }

      .icon {
        transform: rotate(90deg);
        display: none;

        @media (--md-scr) {
          display: inline-block;
        }
      }
    }

    .navLink {
      display: flex;
      align-items: center;
      position: relative;
      padding: var(--m-1) var(--m-1-5) !important;
      margin-left: 64px;
      color: var(--color-black);
      font-size: 13px;
      text-decoration: none;
      line-height: 1.5;
      transition: all 0.2s ease-in-out;
      -webkit-font-smoothing: antialiased;

      &::after {
        display: none;
        content: "";
        position: absolute;
        bottom: 0;
        left: var(--m-2);
        width: calc(100% - 2 * var(--m-2));
        height: 1px;
        background-color: transparent;
        transition: background-color var(--t-fast);
      }

      &.active {
        color: var(--color-dark-purple);

        &::after {
          background-color: var(--color-dark-purple);
        }
      }

      &:hover {
        &:not(.active) {
          background-color: var(--color-tonal-neutral-0);
        }
      }

      &:focus {
        &:not(.active) {
          background-color: var(--color-tonal-neutral-1);
        }
      }

      @media (--md-scr) {
        font-size: var(--fs-text-md);
        padding: var(--m-1-5) 16px;
        margin-left: unset;
        &::after {
          display: block;
        }
      }

      @media (min-width: 1040px) {
        padding: var(--m-1) var(--m-2) !important;
      }
    }
  }
}

